Fix the register layout for the Buffer Descript List Entry.  It got jumbled around during some other cleanups and was causing audio failures on some guests.

PR:		239341
Reported by:	shamaz.mazum@gmail.com